force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_ContractStageName__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ContractStageName__c</fullName>
    <description>This field helps to denote the current stage of the contract document</description>
    <label>Contract Document Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Pending Signature</fullName>
            </value>
            <value>
                <fullName>Partially Executed</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>A</fullName>
                <isActive>false</isActive>
                <label>A</label>
            </value>
            <value>
                <fullName>Accept</fullName>
                <isActive>false</isActive>
                <label>Accept</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Executed / Signed</fullName>
                <isActive>false</isActive>
                <label>Executed / Signed</label>
            </value>
            <value>
                <fullName>Full Executed</fullName>
                <isActive>false</isActive>
                <label>Full Executed</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Pending Signatures</fullName>
                <isActive>false</isActive>
                <label>Pending Signatures</label>
            </value>
            <value>
                <fullName>Signed</fullName>
                <isActive>false</isActive>
                <label>Signed</label>
            </value>
            <value>
                <fullName>\</fullName>
                <isActive>false</isActive>
                <label>\</label>
            </value>
            <value>
                <fullName>hello</fullName>
                <isActive>false</isActive>
                <label>hello</label>
            </value>
            <value>
                <fullName>test</fullName>
                <isActive>false</isActive>
                <label>test</label>
            </value>
            <value>
                <fullName>yfgfgfc</fullName>
                <isActive>false</isActive>
                <label>yfgfgfc</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>