force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_ContractStart__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ContractStart__c</fullName>
    <description>If Master contract exists - then formula to pull the date from Contract reference</description>
    <inlineHelpText>Quote Start Date</inlineHelpText>
    <label>Contract Valid From</label>
    <type>Date</type>
</CustomField>