force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_ContractType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ContractType__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Annual</fullName>
                <isActive>false</isActive>
                <label>Annual</label>
            </value>
            <value>
                <fullName>CCC</fullName>
            </value>
            <value>
                <fullName>FPD</fullName>
            </value>
            <value>
                <fullName>FPD Ex-Space</fullName>
                <isActive>false</isActive>
                <label>FPD Ex-Space</label>
            </value>
            <value>
                <fullName>Priced</fullName>
            </value>
            <value>
                <fullName>Priced Ex-Space</fullName>
                <isActive>false</isActive>
                <label>Priced Ex-Space</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>