force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_CreditAmountTotal__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CreditAmountTotal__c</fullName>
    <description>Fields to store the total amount of credit</description>
    <label>Credit Amount Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>