force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_CreditAvailable__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CreditAvailable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is created as a part of story to handle/store value of Credit Available for any Quote.</description>
    <label>Credit Available</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Credit Available)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>