force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_CreditLimit__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CreditLimit__c</fullName>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>