force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_CropType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CropType__c</fullName>
    <description>Crop type is used in mass update section for quote lines in quote line editor</description>
    <label>Crop Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_CropType</valueSetName>
    </valueSet>
</CustomField>