force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_CustomCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CustomCreatedDate__c</fullName>
    <description>This field is to use when a custom created date is required.</description>
    <label>Custom Created Date</label>
    <type>DateTime</type>
</CustomField>