force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_CustomerAcceptanceMethod__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CustomerAcceptanceMethod__c</fullName>
    <description>This fied is used to capture the medium the quote has been accepted</description>
    <inlineHelpText>Medium through which customer communicated</inlineHelpText>
    <label>Customer Acceptance Method</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SBQQ__Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Accepted by DH Customer</fullName>
            </value>
            <value>
                <fullName>DocuSign</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Text/Whatsapp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>