force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_CustomerOfferedPrice_PriorValue__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CustomerOfferedPrice_PriorValue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stores prior value of PMC_CPQ_CustomerOfferedPrice__c</description>
    <label>CustomerOfferedPrice(PriorValue)</label>
    <type>Checkbox</type>
</CustomField>