force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_CustomerSegment__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CustomerSegment__c</fullName>
    <description>This field is created as a part of story to handle/store value of Customer Segment for any Quote.</description>
    <formula>&quot;&quot;</formula>
    <label>Customer Segment</label>
    <type>Text</type>
</CustomField>