force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_CustomersIndustry__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CustomersIndustry__c</fullName>
    <label>Customer&apos;s Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>