force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_DeliveryEndDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DeliveryEndDate__c</fullName>
    <description>Delivery end date is used in mass update section of quote line editor</description>
    <label>Delivery End Date</label>
    <type>Date</type>
</CustomField>