force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_DeliveryRegion__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DeliveryRegion__c</fullName>
    <inlineHelpText>Delivery Region is enabled to be populated only when the Quote is a VCO Quote</inlineHelpText>
    <label>Delivery Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PMC_CPQ_VCOQuotation__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_DeliveryRegion</valueSetName>
    </valueSet>
</CustomField>