force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_DeliveryStartDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DeliveryStartDate__c</fullName>
    <description>Delivery Start date to use on Mass update on all quote lines.</description>
    <label>Delivery Start Date</label>
    <type>Date</type>
</CustomField>