force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_DeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DeliveryYear__c</fullName>
    <description>Field to hold the information of quote delivery year</description>
    <label>Delivery Year</label>
    <type>Date</type>
</CustomField>