force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_Destination__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Destination__c</fullName>
    <label>Destination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Bangladesh</fullName>
            </value>
            <value>
                <fullName>Barbados</fullName>
                <isActive>false</isActive>
                <label>Barbados</label>
            </value>
            <value>
                <fullName>Belize</fullName>
            </value>
            <value>
                <fullName>Benin</fullName>
                <isActive>false</isActive>
                <label>Benin</label>
            </value>
            <value>
                <fullName>Bolivia</fullName>
                <isActive>false</isActive>
                <label>Bolivia</label>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>Burma</fullName>
            </value>
            <value>
                <fullName>Cambodia</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Chile</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Colombia</fullName>
            </value>
            <value>
                <fullName>Costa Rica</fullName>
            </value>
            <value>
                <fullName>Cuba</fullName>
                <isActive>false</isActive>
                <label>Cuba</label>
            </value>
            <value>
                <fullName>Dominican Rep</fullName>
            </value>
            <value>
                <fullName>Dominican Republic</fullName>
                <isActive>false</isActive>
                <label>Dominican Republic</label>
            </value>
            <value>
                <fullName>Ecuador</fullName>
            </value>
            <value>
                <fullName>El Salvador</fullName>
            </value>
            <value>
                <fullName>Ethiopia</fullName>
                <isActive>false</isActive>
                <label>Ethiopia</label>
            </value>
            <value>
                <fullName>France</fullName>
                <isActive>false</isActive>
                <label>France</label>
            </value>
            <value>
                <fullName>Gabon</fullName>
                <isActive>false</isActive>
                <label>Gabon</label>
            </value>
            <value>
                <fullName>Germany</fullName>
                <isActive>false</isActive>
                <label>Germany</label>
            </value>
            <value>
                <fullName>Ghana</fullName>
                <isActive>false</isActive>
                <label>Ghana</label>
            </value>
            <value>
                <fullName>Guadeloupe</fullName>
            </value>
            <value>
                <fullName>Guatemala</fullName>
            </value>
            <value>
                <fullName>Guinea</fullName>
                <isActive>false</isActive>
                <label>Guinea</label>
            </value>
            <value>
                <fullName>Guyana</fullName>
                <isActive>false</isActive>
                <label>Guyana</label>
            </value>
            <value>
                <fullName>Honduras</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>