force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_DiscountMarkup__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DiscountMarkup__c</fullName>
    <label>Price Adjustment</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>