force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_Document_ID__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Document_ID__c</fullName>
    <description>This field will be used as an identifier for documents generated in DocuSign CLM</description>
    <displayFormat>DOC-{0000000}</displayFormat>
    <label>Document ID</label>
    <type>AutoNumber</type>
</CustomField>