force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_DocumentsRequiredComments__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DocumentsRequiredComments__c</fullName>
    <label>Documents Required Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>