force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_Docusign__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Docusign__c</fullName>
    <label>PMC CPQ DocusignNew User</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>