force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_DraftStatusDuration__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DraftStatusDuration__c</fullName>
    <formula>IF(   ISPICKVAL(SBQQ__Status__c , &quot;Draft&quot;)  &amp;&amp; NOT( ISBLANK(  PMC_CPQ_QuoteInDraftStatusTime__c  ) ) ,   TEXT(ROUND( PMC_CPQ_PriorDraftStatusDuration__c  +((NOW() -  PMC_CPQ_QuoteInDraftStatusTime__c )*24),1))&amp;&apos; Hours&apos;   ,  TEXT( PMC_CPQ_PriorDraftStatusDuration__c  ) &amp;&apos; Hours&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Draft Status Duration</label>
    <type>Text</type>
</CustomField>