force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_EstFreightPrice__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_EstFreightPrice__c</fullName>
    <description>This field is created to check the estimated freight value. This is as per the  US GCPM 1064</description>
    <label>Freight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>