force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_ExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ExchangeRate__c</fullName>
    <label>Negotiated Exchange Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>