force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ExpirationDate__c</fullName>
    <description>This field is to store Expiration date</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>