force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_ExpirationDuration__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ExpirationDuration__c</fullName>
    <description>This field populates the duration this quote will expire and is populated only when the Quote status!=Accpeted or rejected</description>
    <inlineHelpText>When the Quote status is not accepted or rejected this field indicates the duration with in which the quote will be expired</inlineHelpText>
    <label>Expiration Duration</label>
    <type>Time</type>
</CustomField>