force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_ExpirationTime__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ExpirationTime__c</fullName>
    <description>This field is to store Expiration Time</description>
    <label>Expiration Time</label>
    <type>Time</type>
</CustomField>