force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_ExpiresOn__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ExpiresOn__c</fullName>
    <description>This field captures the Date and Time this quote will be expired</description>
    <inlineHelpText>Indicates the Date and Time this Quote will expire</inlineHelpText>
    <label>Expiration Date/Time</label>
    <type>DateTime</type>
</CustomField>