force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_FirstQuoteLineShipToState__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_FirstQuoteLineShipToState__c</fullName>
    <label>First Quote Line Ship To State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>