force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_FlowVRByPassToggle__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_FlowVRByPassToggle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flow VR ByPass Toggle</label>
    <type>Checkbox</type>
</CustomField>