force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_FoBLoadingTermsConditions__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_FoBLoadingTermsConditions__c</fullName>
    <label>FoB Loading Terms &amp; Conditions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>