force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_FPDComments__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_FPDComments__c</fullName>
    <label>FPD Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>