force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_GeneralComments__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_GeneralComments__c</fullName>
    <description>This field to enter the general comments on the quote</description>
    <label>General Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>