force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_GeneralTermsAndConditions__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_GeneralTermsAndConditions__c</fullName>
    <label>General Terms and Conditions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>