force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_GetPriceCallComplete__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_GetPriceCallComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of GDASF-6229. The field is to identify the Get Price callout is completed on the cloned quote and to remove the banner message asking AM / CSR to make the Get Price callout.</description>
    <label>Get Price Call Complete</label>
    <type>Checkbox</type>
</CustomField>