force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_HotQuote__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_HotQuote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used on quote to indicate this is priority quote for Account Manager to submit to the customer</description>
    <inlineHelpText>Prioritized Quote for AM to submit to customer</inlineHelpText>
    <label>Hot Quote</label>
    <type>Checkbox</type>
</CustomField>