force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_Incoterms__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Incoterms__c</fullName>
    <description>The Incoterms for the Product added to the Quote.</description>
    <label>Incoterms</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PMC_CPQ_QuoteRecordSubType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_Incoterms1</valueSetName>
    </valueSet>
</CustomField>