force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_IndustrialBusinessType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_IndustrialBusinessType__c</fullName>
    <description>This field to extract industrial business type to compare with Product sub family</description>
    <formula>IF(TEXT(PMC_CPQ_QuoteRecordSubType__c)=&quot;Industrial&quot;,TEXT(PMC_CPQ_QuoteRecordSubType__c),&quot;&quot; )</formula>
    <label>Industrial Business type</label>
    <type>Text</type>
</CustomField>