force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_IndustrialShipment__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_IndustrialShipment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator for Industrial Shipment</description>
    <label>Industrial Shipment</label>
    <type>Checkbox</type>
</CustomField>