force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_IntegrationMessage__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_IntegrationMessage__c</fullName>
    <description>Created as part of GDASF-5842. This field will capture the integration response message</description>
    <inlineHelpText>receives the Integration response message</inlineHelpText>
    <label>Integration Message</label>
    <type>TextArea</type>
</CustomField>