force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_IntegrationStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_IntegrationStatus__c</fullName>
    <description>Created as part of GDASF-5842. This field will capture the overall integration status.</description>
    <inlineHelpText>Indicates the over all integration status</inlineHelpText>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>