force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_InternationalAnnualContract__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_InternationalAnnualContract__c</fullName>
    <label>International Annual Contract</label>
    <type>TextArea</type>
</CustomField>