force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_ISBR__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ISBR__c</fullName>
    <formula>If( ISPICKVAL(PMC_CPQ_Region__c, &apos;Brazil&apos;) ,False,True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IS BR</label>
    <type>Checkbox</type>
</CustomField>