force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_IsCloned__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_IsCloned__c</fullName>
    <formula>IF(  NOT(ISBLANK(SBQQ__Source__c) ) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsCloned</label>
    <type>Checkbox</type>
</CustomField>