force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_IsContractPeriodChanged__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_IsContractPeriodChanged__c</fullName>
    <formula>(PMC_CPQ_ContractStart__c &lt;&gt; PMC_CPQ_LastContractStart__c)  || ( PMC_CPQ_ContractEnd__c  &lt;&gt;  PMC_CPQ_LastContractEnd__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Contract Period Changed</label>
    <type>Checkbox</type>
</CustomField>