force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created as a part of story to check if the Quote is considered for Deletion.</description>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>