force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_LastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_LastActivityDate__c</fullName>
    <description>This field indicates the lastActivity date for Quote</description>
    <inlineHelpText>Indicates the date any activity has been done on this Quote.</inlineHelpText>
    <label>Last Activity Date</label>
    <type>Date</type>
</CustomField>