force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_LastContractEnd__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_LastContractEnd__c</fullName>
    <description>This field will hold the last value of Contract Valid To sent to SAP.</description>
    <label>Last Contract Valid To</label>
    <type>Date</type>
</CustomField>