force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_LastContractStart__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_LastContractStart__c</fullName>
    <description>This field will hold last value of Contract Valid From sent to SAP.</description>
    <label>Last Contract Valid From</label>
    <type>Date</type>
</CustomField>