force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_LastReferencedDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_LastReferencedDate__c</fullName>
    <description>This field is created as a part of story to handle/store value of Last Referenced Date for any Quote by a user.</description>
    <label>Last Referenced Date</label>
    <type>DateTime</type>
</CustomField>