force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_LastViewedDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_LastViewedDate__c</fullName>
    <description>This field is created as a part of story to handle/store value of Last Viewed Date for any Quote by a user.</description>
    <label>Last Viewed Date</label>
    <type>DateTime</type>
</CustomField>