force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_LaycanEndDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_LaycanEndDate__c</fullName>
    <label>Laycan End Date</label>
    <type>Date</type>
</CustomField>