force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_LaycanStartDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_LaycanStartDate__c</fullName>
    <label>Laycan Start Date</label>
    <type>Date</type>
</CustomField>