force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_LaytimeSettlement__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_LaytimeSettlement__c</fullName>
    <label>Laytime Settlement</label>
    <length>5072</length>
    <type>Html</type>
</CustomField>