force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_Loadport__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Loadport__c</fullName>
    <label>Loadport</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Berth Tampa, FL range (including Port Manatee)</fullName>
            </value>
            <value>
                <fullName>1-2 Berth Tampa, FL range (including Port Manatee)</fullName>
            </value>
            <value>
                <fullName>2 Berth Tampa, FL range (including Port Manatee)</fullName>
            </value>
            <value>
                <fullName>2-3 Berth Tampa, FL range (including Port Manatee)</fullName>
            </value>
            <value>
                <fullName>3 Berth Tampa, FL range (including Port Manatee)</fullName>
            </value>
            <value>
                <fullName>3-4 Berth Tampa, FL range (including Port Manatee)</fullName>
            </value>
            <value>
                <fullName>1 Berth Galveston, TX</fullName>
            </value>
            <value>
                <fullName>1 Berth Donaldsonville, LA</fullName>
            </value>
            <value>
                <fullName>1-2 Berth Tampa, FL range (including Port Manatee) and/or 1 Berth Donaldsonville, LA at Sellers Option</fullName>
            </value>
            <value>
                <fullName>Carlsbad, New Mexico</fullName>
            </value>
            <value>
                <fullName>1- Berth Ras Al Khair (RAK), KSA</fullName>
            </value>
            <value>
                <fullName>1 - Berth Bayovar, Peru</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>