force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_Location__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>CPQ Quotes</relationshipLabel>
    <relationshipName>CPQ_Quotes_del</relationshipName>
    <type>Lookup</type>
</CustomField>