force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_ModeOfTransportation__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ModeOfTransportation__c</fullName>
    <label>Mode of Transportation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_MoT</valueSetName>
    </valueSet>
</CustomField>