force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_MosaicSignatoryEmail__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_MosaicSignatoryEmail__c</fullName>
    <description>This field will be used to store the email of the signer from Mosaic.</description>
    <label>Mosaic Signatory Email</label>
    <type>Email</type>
</CustomField>