force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_MosaicSignatoryName__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_MosaicSignatoryName__c</fullName>
    <description>This field will be used to store the name of the signer from Mosaic</description>
    <label>Mosaic Signatory Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>