force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_NetPrice__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_NetPrice__c</fullName>
    <description>This field is created as a part of story to handle/store value of Net Price for any Quote.</description>
    <label>Net Price</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetPrice__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>