force-app/main/default/objects/SBQQ__Quote__c/fields/PMC_CPQ_OpportunityQuantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_OpportunityQuantity__c</fullName>
    <label>Opportunity Quantity</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>